--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../src/styles/main.css">
-  <title>JS Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <title>JS Portfolio2</title>
 </head>
 
 <body>
   <div id="main"></div>
-  <script type="module" src="../src//index.js"></script>
+   
 </body>
 
 </html>
